# deeper-chain

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.me  docker-compose.yml  nohup.out  rust-toolchain  rustfmt.toml  wallet-integration.md
-/: Cargo.toml
.github/workflows/: bench.yml  benchmark.yml  build-and-release.yml  build.yml  coverage.yml  release.yml  slack-notify.yml  style_check.yml  test.yml
.maintain/: frame-weight-template.hbs
DIP/: DIP-0001.md  DIP-0001:Easy Cent (EZC) Trading Medium Criterion.md  DIP-0001:Easy Cent(EZC)交易媒介规范.md  DIP-0002:NPoW Mechanism.md  DIP-0002:NPoW工作量证明机制.md  DIP-0003:Deeper Edge Computing.md
bench/: Cargo.toml
bench/src/: common.rs  construct.rs  core.rs  generator.rs  import.rs  main.rs  simple_trie.rs  state_sizes.rs  tempdb.rs  trie.rs  txpool.rs
benchmark-env/100nodes/: docker-compose.yml  install_key.sh
benchmark-env/10nodes/: docker-compose.yml  install_key.sh
benchmark-env/4nodes/: docker-compose.yml  install_key.sh
browser-testing/: Cargo.toml
cli/: Cargo.toml  build.rs
cli/res/: mainnet-spec.json
cli/src/: benchmarking.rs  browser.rs  chain_spec.rs  cli.rs  command.rs  eth.rs  lib.rs  service.rs
cli/tests/: benchmark_block_works.rs  benchmark_extrinsic_works.rs  benchmark_machine_works.rs  benchmark_overhead_works.rs  benchmark_pallet_works.rs  benchmark_storage_works.rs  build_spec_works.rs  check_block_works.rs  common.rs  export_import_flow.rs  inspect_works.rs  purge_chain_works.rs  running_the_node_and_interrupt.rs  telemetry.rs  temp_base_path_works.rs  version.rs  websocket_server.rs
dev/bench/: data.js
executor/: Cargo.toml
executor/benches/: bench.rs
executor/src/: lib.rs
executor/tests/: basic.rs  common.rs  fees.rs  submit_transaction.rs
frontier/: package.json
frontier/scripts/: evm_test.js  my_token.json  package-lock.json  web3_test.js
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
jenkins/: Jenkinsfile  post.sh
pallets/: types.json
pallets/adsc/: Cargo.toml
pallets/adsc/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: benchmarking.rs  default_weight.rs  lib.rs  tests.rs  tests_composite.rs  tests_local.rs  weights.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: benchmarking.rs  ether_bridge_abi.json  ethereum.rs  kovan_bridge_abi.json  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/credit/: Cargo.toml
pallets/credit-accumulation/: Cargo.toml  README.md
pallets/credit-accumulation/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
pallets/credit/src/: benchmarking.rs  credit_setting.rs  data_struct_and_traits.rs  genesis_for_staking_mock.rs  helper_methods.rs  lib.rs  mock.rs  reward_manager.rs  tests.rs  weights.rs
pallets/deeper-machine/: Cargo.toml
pallets/deeper-machine/src/: lib.rs  weights.rs
pallets/deeper-node/: Cargo.toml
pallets/deeper-node/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/deeper_node/: Cargo.toml
pallets/deeper_node/src/: lib.rs  mock.rs  tests.rs
pallets/delegating/: Cargo.toml
pallets/delegating/src/: lib.rs  mock.rs  tests.rs
pallets/elections-phragmen/: CHANGELOG.md  Cargo.toml
pallets/elections-phragmen/src/: benchmarking.rs  lib.rs  weights.rs
pallets/elections-phragmen/src/migrations/: v3.rs  v4.rs  v5.rs
pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs
pallets/micropayment/: Cargo.toml  README.md
pallets/micropayment/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
pallets/operation/: Cargo.toml
pallets/operation/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/precompile-credit/: Cargo.toml
pallets/precompile-credit/example/: call_credit.sol
pallets/precompile-credit/src/: lib.rs  util.rs
pallets/preimage/: Cargo.toml
pallets/preimage/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs
pallets/stake2/: Cargo.toml
pallets/stake2/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/staking/: Cargo.toml  README.md
pallets/staking-with-credit/: Cargo.toml
pallets/staking-with-credit/fuzzer/: Cargo.toml
pallets/staking-with-credit/reward-curve/: Cargo.toml
pallets/staking-with-credit/src/: lib.rs  mock.rs  tests.rs
pallets/staking/fuzzer/: Cargo.toml
pallets/staking/fuzzer/src/: mock.rs
pallets/staking/reward-curve/src/: lib.rs
pallets/staking/src/: benchmarking.rs  lib.rs  mock.rs  offchain_election.rs  slashing.rs  testing_utils.rs  tests.rs  weights.rs
pallets/staking_with_credit/: Cargo.toml
pallets/staking_with_credit/src/: benchmarking.rs  default_weights.rs  inflation.rs  lib.rs  mock.rs  offchain_election.rs  slashing.rs  testing_utils.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: credit.rs  deeper_node.rs  lib.rs  user_privileges.rs
private_chain/: README.md  alice_gran.json  bob_gran.json  chain_spec_gen.py  chain_spec_key_gen.sh  chao.json  chao0.json  chao1.json  chao2.json  chao_gran.json  chao_gran0.json  chao_gran1.json  chao_gran2.json  clean.sh  deploy.yml  insert_key.sh  insert_key_in_product.sh  key_file  key_file0  key_file1  key_file2  kill_thread.sh  nohup.out  start_node.sh  start_node_in_product.sh
rpc/: Cargo.toml
rpc-client/: Cargo.toml
rpc/src/: eth.rs  lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: assets_api.rs  constants.rs  impls.rs  lib.rs  precompiles.rs
runtime/src/weights/: mod.rs  pallet_proxy.rs  pallet_staking_with_credit.rs
scripts/: README.md  add_credit_by_traffic.js  benchmark-micropayment.js  benchmark-tranfer-for-finalized-time.js  benchmark-tranfer.js  deeper_node_test.js  index.js  initPairs.json  initPairsJsonBalance.js  init_staking_and_session.js  micropayment_test.js  package-lock.json  package.json  poc_test.js  product_key_to_json.js  send_tx.js  staking_test.js  test.js  tps-tool.js  types.json  utils.js
test-client/: Cargo.toml
test-client/src/: client_ext.rs  lib.rs
testing/: Cargo.toml
testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs
(+143 files in other folders)
