[package]
name = "node-bench"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node integration benchmarks."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
node-primitives = { workspace = true, default-features = true }
node-testing = { workspace = true, default-features = true }
node-runtime = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
derive_more = { workspace = true, features = [
    "display",
] }
kvdb = { workspace = true }
kvdb-rocksdb = { workspace = true }
sp-trie = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sc-basic-authorship = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }
sp-tracing = { workspace = true, default-features = true }
hash-db = { workspace = true }
tempfile = { workspace = true }
fs_extra = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, default-features = true,features = ["small_rng"] }
lazy_static = { workspace = true }
parity-util-mem = { workspace = true, default-features = true,features = [
    "primitive-types",
] }
parity-db = { workspace = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
futures = { workspace = true, features = ["thread-pool"] }
